Changes since version 2.0.0
---------------------------

- Fixed a deadlock that could occur if a server cannot send data
  during connection validation.

- Glacier2 could hang if a server is not running. This has been fixed.

- Added support for g++ builds on Solaris.

- Fixed IcePack node and registry database environment names. They
  have been changed to be the name of the node for IcePack nodes and
  'Registry' for the IcePack registry. This means that you can now
  configure the database environment using the properties prefixed
  with Freeze.DbEnv.<node name> or Freeze.DbEnv.Registry.

- Fixed a bug where the endpoint cache for indirect proxies wasn't
  always cleared upon a communication failure with an object.

- Fixed a race condition in the IcePack on-demand server activation
  code which could cause clients to hang under rare conditions if the
  server couldn't be activated.

- Fixed a small memory leak in the IcePack node that would occur each
  time a process is forked (Unix only).

- Added 'object list' and 'object describe' IcePack admin commands.

- Changed the signature of IcePack::Admin::removeObject() to take the
  identity of the object instead of its proxy.

- Connection validation now checks for the timeout specified by the
  property Ice.Override.ConnectTimeout and will raise
  Ice::ConnectTimeoutException if the connection validation times out.

- Fixed an assert that could occur during connection establishment if
  no more file descriptors are available.

- Improved support for on-demand server activation in IcePack.

- Improved the IcePack registry to prevent potential deadlocks caused
  by thread starvation.

- The Ice manual stated that the IcePack configuration property
  IcePack.Registry.Internal.Endpoints was only necessary when nodes
  were being used, but in fact the property is required regardless
  of whether nodes are used. The manual has been updated accordingly.

- Fixed a bug where Ice::ObjectAdapter::activate() could throw